@@ -42,6 +42,9 @@ bzr-svn	1.0.3					  UNRELEASED
   * Cope with local repository that can not be opened. (Jelmer Vernooij,
       #463020)
 
+  * Don't rely on old revision being on the mainline after push. 
+    (Jelmer Vernooij, 522836)
+
  FEATURES
 
   * Support fetching a limited number of revisions. (Michael Hudson)
